--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -8,11 +8,13 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GH_PAT }}
       - run: |
           LOCAL_VER=$(git -c 'versionsort.suffix=-' \
               ls-remote --exit-code --refs --sort='version:refname' --tags https://github.com/AISFlow/AppFlowy-Web-App.git \
