--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
       - run: |
           LOCAL_VER=$(git -c 'versionsort.suffix=-' \
               ls-remote --exit-code --refs --sort='version:refname' --tags https://github.com/AISFlow/AppFlowy-Web-App.git \
