--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
   packages: write
   id-token: write
-  
+  actions: write
 jobs:
   publish:
     runs-on: ubuntu-latest
